--- a/Assignment 1/Source code/preprocessing.ipynb
+++ b/Assignment 1/Source code/preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 59,
    "id": "8dd301b2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 60,
    "id": "3b639ef6",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 61,
    "id": "461b2bf6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 62,
    "id": "efd9f734",
    "metadata": {},
    "outputs": [],
@@ -69,12 +69,13 @@
     "  columns_with_null = data.isnull().sum() > 0\n",
     "  columns_with_null = columns_with_null[columns_with_null].index\n",
     "\n",
-    "  data_without_types = data.drop(columns=['Type'])\n",
-    "\n",
     "  for column in columns_with_null:\n",
-    "    correlation = data_without_types.corr()[column]\n",
-    "    column_to_average = correlation[correlation.abs() > 0.5].index\n",
-    "    data[column].fillna(data[column_to_average].mean(axis=1), inplace=True)"
+    "    data[column].fillna(data[column].mean(), inplace=True)\n",
+    "\n",
+    "  # for column in columns_with_null:\n",
+    "  #   correlation = data_without_types.corr()[column]\n",
+    "  #   column_to_average = correlation[correlation.abs() > 0.5].index\n",
+    "  #   data[column].fillna(data[column_to_average].mean(axis=1), inplace=True)"
    ]
   },
   {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 63,
    "id": "2089a5b0",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 64,
    "id": "66006e43",
    "metadata": {},
    "outputs": [],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 65,
    "id": "b26855f4",
    "metadata": {},
    "outputs": [],
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 66,
    "id": "afd5f385",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 67,
    "id": "2093d7a3",
    "metadata": {},
    "outputs": [],
