--- a/Assignment 1/Source code/preprocessing.ipynb
+++ b/Assignment 1/Source code/preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "8dd301b2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "3b639ef6",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "461b2bf6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "efd9f734",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "2089a5b0",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "66006e43",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "b26855f4",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "afd5f385",
    "metadata": {},
    "outputs": [],
@@ -178,20 +178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "2093d7a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def perform_preprocessing():\n",
     "  data = read_in_csv('../Data/Almond.csv')\n",
+    "  visualise_outlying_values(data)\n",
     "  drop_columns(data)\n",
     "  handle_missing_values(data)\n",
     "  handle_outlying_values(data)\n",
     "  normalise_data(data)\n",
     "  encode_categorical_data(data)\n",
+    "  visualise_outlying_values(data)\n",
     "\n",
-    "  return data"
+    "  return data\n",
+    "\n",
+    "perform_preprocessing()"
    ]
   }
  ],
